--- a/app/templates/dashboard_manager.html
+++ b/app/templates/dashboard_manager.html
@@ -54,7 +54,7 @@
 
                     </button>
                     <div id="filter-priority-menu" class="absolute left-0 top-full mt-1 bg-white rounded-lg shadow-lg border border-gray-200 py-1 min-w-[150px] z-50 hidden">
-                        {{ filter_priority_menu_items() }}
+                        <!-- this is populated on init -->
                     </div>
                 </div>
 
