--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -69,7 +69,7 @@
 
             <button type="button" onclick="saveProfile()"
                     class="w-1/2 bg-blue-600 hover:bg-blue-700 text-white py-2 rounded-lg font-medium transition">
-                Safe
+                Save
             </button>
         </div>
 
