--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -35,7 +35,7 @@
     </div>
 </div>
 
-<!-- Link JS at the bottom -->
+<!-- link js files -->
 <script src="{{ url_for('static', filename='js/login.js') }}"></script>
 <script src="{{ url_for('static', filename='js/auth_interceptor.js') }}"></script>
 
