--- a/app/templates/dashboard_layout.html
+++ b/app/templates/dashboard_layout.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flask App</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/output.css') }}">
+    <link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
     <style>
     @media (max-width: 767px) {
         #ticket-sidebar {
